# SUDOKU_SOLVER

./: .gitmodules  CMakeLists.txt  compile_flags.txt  readme.md  readme.org  run
include/: bfs.h  constants.h  grid_utils.h  solver.h
include/lib/: binary_heap.h  comparators.h  edge.h  graph.h  graph_utils.h  heap_base.h  heuristics.h  line.h  map.h  node.h  node_rbtree.h  pair.h  point.h  priority_queue_bheap.h  queue_base.h  queue_slkd.h  red_black_tree.h  stack_slkd.h  vector.h  vertex.h
src/: constants.cc  grid_utils.cc  main.cc  solver.cc
src/lib/: binary_heap.cc  comparators.cc  edge.cc  graph.cc  graph_utils.cc  heuristics.cc  line.cc  map.cc  node.cc  node_rbtree.cc  pair.cc  point.cc  priority_queue_bheap.cc  queue_base.cc  queue_slkd.cc  red_black_tree.cc  stack_slkd.cc  vector.cc  vertex.cc
test/benchmarks/: benchmark.sh  plot.py
test/inputs/easy/: case000.in  case000.out  case001.in  case001.out  case002.in  case002.out  case003.in  case003.out  case005.in  case005.out  case007.in  case007.out  case011.in  case011.out  case012.in  case012.out  case013.in  case013.out  case014.in  case014.out  case015.in  case015.out  case017.in  case017.out  case025.in  case025.out  case026.in  case026.out  case031.in  case031.out  case033.in  case033.out  case035.in  case035.out  case036.in  case036.out  case037.in  case037.out  case038.in  case038.out  (+194 more)
test/inputs/hard/: case004.in  case004.out  case006.in  case006.out  case018.in  case018.out  case019.in  case019.out  case020.in  case020.out  case024.in  case024.out  case029.in  case029.out  case034.in  case034.out  case043.in  case043.out  case047.in  case047.out  case049.in  case049.out  case052.in  case052.out  case054.in  case054.out  case058.in  case058.out  case061.in  case061.out  case066.in  case066.out  case079.in  case079.out  case080.in  case080.out  case083.in  case083.out  case084.in  case084.out  (+30 more)
test/inputs/medium/: case009.in  case009.out  case010.in  case010.out  case016.in  case016.out  case021.in  case021.out  case022.in  case022.out  case023.in  case023.out  case027.in  case027.out  case030.in  case030.out  case032.in  case032.out  case039.in  case039.out  case040.in  case040.out  case046.in  case046.out  case050.in  case050.out  case056.in  case056.out  case062.in  case062.out  case064.in  case064.out  case071.in  case071.out  case073.in  case073.out  case075.in  case075.out  case086.in  case086.out  (+46 more)
test/inputs/super_easy/: case008.in  case008.out  case129.in  case129.out  case135.in  case135.out  case147.in  case147.out  case186.in  case186.out
test/inputs/super_hard/: case028.in  case028.out
test/unit/: main_doctest.cc
tools/: generate_input_cases.sh  generator.py  run_tests.sh
